--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Your go-to pet store for all pet needs! Shop for food, toys, and accessories.">
+    <meta name="keywords" content="pets, pet store, dog food, cat toys, pet accessories">
+    <meta name="author" content="Second Term Team 1">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Pet's for JavaScript - Best Pet Supplies Online">
+    <meta property="og:description" content="Find everything your pet needs, from food to fun toys!">
+    <meta property="og:image" content="https://mcsbt-javascript.web.app/favicon.png">
+    <meta property="og:url" content="https://mcsbt-javascript.web.app/">
+    <meta property="og:site_name" content="Pet's for JavaScript">
     <title>Pet's for JavaScript</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
